# pear

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  messages.ftl  rust-toolchain.toml
pear_backend/: Cargo.toml
pear_backend/src/: global_analysis.rs  lib.rs  local_analysis.rs  serialize.rs  utils.rs
pear_backend/src/analysis/: global_analysis.rs  local_analysis.rs  mod.rs
pear_backend/src/caching/: caching.rs  encoder.rs  mod.rs
pear_backend/src/reachability/: collector.rs
pear_backend/src/refiner/: mod.rs  refiner.rs
pear_frontend/: Cargo.toml
pear_frontend/src/: lib.rs  logging.rs  pear_plugin.rs  scrutinizer_plugin.rs
pear_frontend/src/analysis/: caching_local.rs  dumping_global.rs  mod.rs  utils.rs
pear_frontend/src/analysis/runner/: dumping_global.rs  util.rs
pear_frontend/src/analysis/scrutinizer/: mod.rs  scrutinizer_global.rs  scrutinizer_local.rs  utils.rs
pear_frontend/src/analysis/scrutinizer/analyzer/: analyzer.rs  deps.rs  mod.rs  result.rs
pear_frontend/src/analysis/scrutinizer/analyzer/heuristics/: mod.rs  transmute.rs  transmute_and_copy.rs
pear_frontend/src/analysis/scrutinizer/important/: compute.rs  important.rs  mod.rs
pear_frontend/src/analysis/scrutinizer/selector/: function.rs  ppr.rs
peirce_backend/: Cargo.toml  messages.ftl
peirce_backend/src/: global_analysis.rs  lib.rs  local_analysis.rs  serialize.rs  utils.rs
peirce_backend/src/caching/: caching.rs  encoder.rs  mod.rs
peirce_backend/src/reachability/: collector.rs  errors.rs  mod.rs
peirce_backend/src/refiner/: mod.rs  utils.rs
peirce_frontend/: Cargo.toml
peirce_frontend/src/: lib.rs  logging.rs
src/: lib.rs
src/body_cache/: body_cache.rs  mod.rs
src/reachability/: collector.rs  errors.rs
test-crate/src/collections/: mod.rs
test-crate/src/tests/: lam.rs  leaky.rs  mod.rs  raw_ptr.rs  recursive.rs
tests/: Cargo.toml  scrutinizer-config.toml
tests/expected/: kani::closure::boxed_closure::main.refined.pear.expected  kani::closure::closure_main::main.refined.pear.expected  kani::closure::closure_ptr::check_closure_ptr.refined.pear.expected  kani::closure::fn_mut_closure::main.refined.pear.expected  kani::closure::tupled_closure::main.refined.pear.expected  kani::closure::zst_param::check_zst_param.refined.pear.expected  kani::dyn_trait::boxed_closure::main.refined.pear.expected  kani::dyn_trait::boxed_display_cast::main.refined.pear.expected  kani::dyn_trait::boxed_trait::main.refined.pear.expected  kani::dyn_trait::different_crates::main.refined.pear.expected  kani::dyn_trait::dyn_fn_mut::main.refined.pear.expected  kani::dyn_trait::dyn_fn_once::main.refined.pear.expected  kani::dyn_trait::dyn_fn_param::main.refined.pear.expected  kani::dyn_trait::dyn_fn_param_closure::main.refined.pear.expected  kani::dyn_trait::dyn_fn_param_closure_capture::main.refined.pear.expected  kani::dyn_trait::dyn_main::main.refined.pear.expected  kani::dyn_trait::generic_duplicate_names::main.refined.pear.expected  kani::dyn_trait::generic_duplicate_names_impl::main.refined.pear.expected  kani::dyn_trait::nested_closures::main.refined.pear.expected  kani::dyn_trait::object_safe_generics::main.refined.pear.expected  kani::dyn_trait::object_safe_trait::main.refined.pear.expected  kani::dyn_trait::std_lib_add_duplicate::main.refined.pear.expected  kani::dyn_trait::unsized_box_cast::check_box.refined.pear.expected  kani::dyn_trait::unsized_rc_cast::check_rc.refined.pear.expected  kani::dyn_trait::unsized_ref_cast::check_ref.refined.pear.expected  kani::dyn_trait::vtable_duplicate_field_override::main.refined.pear.expected  kani::dyn_trait::vtable_duplicate_fields::main.refined.pear.expected
tests/src/: lib.rs
tests/src/collections/: btreemap.rs  hashmap.rs  hashset.rs  linked_list.rs  mod.rs  vec.rs  vec_unhandled.rs
tests/src/kani/: mod.rs
tests/src/kani/closure/: boxed_closure.rs  closure_main.rs  closure_ptr.rs  fn_mut_closure.rs  mod.rs  tupled_closure.rs  zst_param.rs
tests/src/kani/dyn_trait/: any_cast_int.rs  boxed_closure.rs  boxed_debug_cast.rs  boxed_display_cast.rs  boxed_trait.rs  dyn_main.rs  (+18 more)
tests/src/pear/: async_fns.rs  drop.rs  dynamic.rs  fn_ptr.rs  fn_trait.rs  mod.rs  static.rs
tests/src/peirce/: dynamic.rs  fn_ptr.rs  fn_trait.rs  mod.rs  static.rs
tests/src/scrutinizer/: dyn.rs  fn_ptr.rs  foreign.rs  lam.rs  leaky.rs  mod.rs  raw_ptr.rs  recursive.rs  static.rs  structs.rs  vartrack.rs
tests/src/tests/: dyn.rs  fn_ptr.rs  foreign.rs  lam.rs  leaky.rs  mod.rs  raw_ptr.rs  recursive.rs  refine.rs  static.rs  vartrack.rs
(+14 files in other folders)
