[package]
name = "peirce"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
rustc_plugin = "=0.8.0-nightly-2024-01-06"

clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
