[workspace]
members = ["pear_backend", "pear_frontend"]
exclude = ["tests"]
resolver = "2"

[workspace.dependencies]
rustc_plugin = { path = "./rustc_plugin/crates/rustc_plugin" }
rustc_utils = { path = "./rustc_plugin/crates/rustc_utils" }

flowistry = { path = "./flowistry/crates/flowistry" }
indexical = { version = "0.3.1", default-features = false, features = [
    "rustc",
] }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
regex = { version = "1" }

log = { version = "0.4", features = ["kv", "kv_serde"] }
fern = { version = "0.7" }

clap = { version = "4.5", features = ["derive"] }

itertools = { version = "0.14" }

colored = { version = "2.2" }

toml = { version = "0.8" }
