[package]
name = "pear_frontend"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
pear_backend = { path = "../pear_backend" }

flowistry = { workspace = true }
rustc_plugin = { workspace = true }
rustc_utils = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }

log = { workspace = true }
fern = { workspace = true }

clap = { workspace = true }

itertools = { workspace = true }

colored = { workspace = true }
