[package]
name = "peirce_frontend"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
rustc_plugin = { workspace = true }
rustc_utils = { workspace = true }

peirce_backend = { path = "../peirce_backend" }

serde = { workspace = true }
serde_json = { workspace = true }

log = { workspace = true }
env_logger = { workspace = true }

clap = { workspace = true }
