[package]
name = "peirce_frontend"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
peirce_backend = { path = "../peirce_backend" }

rustc_plugin = { path = "../rustc_plugin/crates/rustc_plugin" }
rustc_utils = { path = "../rustc_plugin/crates/rustc_utils" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

log = "0.4"
env_logger = "0.11"

clap = { version = "4.5", features = ["derive"] }
